bin/parser/y.output
   0  $accept : programa $end

   1  programa : IDENTIFICADOR BEGIN cuerpo END
   2           | IDENTIFICADOR BEGIN END
   3           | IDENTIFICADOR BEGIN cuerpo
   4           | IDENTIFICADOR error cuerpo END
   5           | BEGIN cuerpo END
   6           | IDENTIFICADOR error cuerpo error

   7  cuerpo : cuerpo sentencia
   8         | sentencia

   9  sentencia : sentenciaDeclarativa
  10            | sentenciaEjecutable ';'
  11            | etiqueta
  12            | sentenciaEjecutable error
  13            | error ';'
  14            | sentenciaRet ';'

  15  sentenciaDeclarativa : tipoDato IDENTIFICADOR ';'
  16                       | tipoDato IDENTIFICADOR ',' listaVariable ';'
  17                       | tipoDato IDENTIFICADOR ',' error ';'
  18                       | tipoDato IDENTIFICADOR ',' listaVariable error ';'
  19                       | tipoDato IDENTIFICADOR error ';'
  20                       | typedefDeclaracion ';'
  21                       | typedefDeclaracion error
  22                       | tipoDato funDeclaracion ';'

  23  typedefDeclaracion : TYPEDEF declaracionSubtipo
  24                     | TYPEDEF declaracionTriple
  25                     | declaracionSubtipo
  26                     | error declaracionTriple
  27                     | TYPEDEF error

  28  declaracionSubtipo : IDENTIFICADOR SIMASIGNACION tipoDato '{' listaConstante '}'
  29                     | SIMASIGNACION tipoDato '{' listaConstante '}'
  30                     | IDENTIFICADOR SIMASIGNACION tipoDato '{' '}'

  31  declaracionTriple : TRIPLE '<' tipoDato '>' IDENTIFICADOR
  32                    | TRIPLE '<' IDENTIFICADOR '>' IDENTIFICADOR
  33                    | TRIPLE '<' error '>' IDENTIFICADOR
  34                    | TRIPLE '<' tipoDato '>' error
  35                    | TRIPLE '<' IDENTIFICADOR '>' error
  36                    | TRIPLE '<' error '>' error
  37                    | TRIPLE IDENTIFICADOR '>' IDENTIFICADOR
  38                    | TRIPLE '<' IDENTIFICADOR IDENTIFICADOR
  39                    | TRIPLE IDENTIFICADOR IDENTIFICADOR
  40                    | TRIPLE tipoDato IDENTIFICADOR

  41  funDeclaracion : funComienzo '(' parametro ')' BEGIN cuerpoFuncion END
  42                 | FUN error '(' parametro ')' BEGIN cuerpoFuncion END
  43                 | funComienzo '(' parametro ',' error ')' BEGIN cuerpoFuncion END
  44                 | funComienzo '(' parametro ')' BEGIN error END

  45  funComienzo : FUN IDENTIFICADOR

  46  tipoDato : SINGLE
  47           | LONGINT
  48           | HEXADECIMAL

  49  listaVariable : listaVariable ',' IDENTIFICADOR
  50                | listaVariable ',' error
  51                | IDENTIFICADOR

  52  listaConstante : listaConstante ',' constante
  53                 | constante

  54  constante : CONSTANTE
  55            | '-' CONSTANTE

  56  parametro : tipoDato IDENTIFICADOR
  57            | error IDENTIFICADOR
  58            | tipoDato error

  59  cuerpoFuncion : cuerpoFuncion sentenciaConRet
  60                | sentenciaConRet

  61  sentenciaConRet : sentenciaDeclarativa
  62                  | sentenciaEjecutableConRet ';'
  63                  | etiqueta
  64                  | sentenciaEjecutableConRet

  65  sentenciaRet : RET '(' expresion ')'

  66  sentenciaEjecutable : asignacion
  67                      | clausulaSeleccion
  68                      | clausulaBucle
  69                      | goto
  70                      | mensajeSalida

  71  sentenciaEjecutableConRet : asignacion
  72                            | clausulaBucle
  73                            | goto
  74                            | mensajeSalida
  75                            | sentenciaRet
  76                            | clausulaSeleccionConRet

  77  asignacion : IDENTIFICADOR SIMASIGNACION expresion
  78             | IDENTIFICADOR CADENA_MULTI SIMASIGNACION expresion
  79             | IDENTIFICADOR CONSTANTE SIMASIGNACION expresion

  80  expresion : expresion operador operando
  81            | expresion operador error
  82            | error operador operando
  83            | operando

  84  operador : '+'
  85           | '-'
  86           | '*'
  87           | '/'

  88  operando : IDENTIFICADOR
  89           | constante
  90           | invocacionFuncion
  91           | IDENTIFICADOR CADENA_MULTI
  92           | IDENTIFICADOR '1'
  93           | IDENTIFICADOR '2'
  94           | IDENTIFICADOR '3'

  95  invocacionFuncion : IDENTIFICADOR '(' expresion ')'
  96                    | IDENTIFICADOR '(' tipoDato expresion ')'
  97                    | IDENTIFICADOR '(' tipoDato '(' expresion ')' ')'
  98                    | IDENTIFICADOR '(' expresion ',' error ')'
  99                    | IDENTIFICADOR '(' error ')'
 100                    | IDENTIFICADOR '(' tipoDato expresion ',' error ')'
 101                    | IDENTIFICADOR '(' tipoDato '(' expresion ')' ',' error ')'

 102  clausulaSeleccion : IF '(' condicion ')' THEN bloqueSentenciaEjecutable END_IF
 103                    | IF '(' expresion ')' THEN bloqueSentenciaEjecutable END_IF
 104                    | IF '(' expresion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF
 105                    | IF '(' condicion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF
 106                    | IF '(' condicion ')' THEN bloqueSentenciaEjecutable error
 107                    | IF '(' condicion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable error
 108                    | IF '(' condicion THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF
 109                    | IF '(' condicion THEN bloqueSentenciaEjecutable END_IF
 110                    | IF condicion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF
 111                    | IF condicion ')' THEN bloqueSentenciaEjecutable END_IF
 112                    | IF condicion THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF
 113                    | IF condicion THEN bloqueSentenciaEjecutable END_IF
 114                    | IF '(' condicion ')' THEN error END_IF
 115                    | IF '(' condicion ')' THEN bloqueSentenciaEjecutable ELSE error END_IF
 116                    | IF '(' condicion ')' THEN error ELSE bloqueSentenciaEjecutable END_IF
 117                    | IF '(' condicion ')' THEN error ELSE error END_IF

 118  clausulaSeleccionConRet : IF '(' condicion ')' THEN bloqueSentenciaEjecutableConRet END_IF
 119                          | IF '(' expresion ')' THEN bloqueSentenciaEjecutableConRet END_IF
 120                          | IF '(' expresion ')' THEN bloqueSentenciaEjecutableConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 121                          | IF '(' condicion ')' THEN bloqueSentenciaEjecutableConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 122                          | IF '(' condicion ')' THEN bloqueSentenciaEjecutableConRet error
 123                          | IF '(' condicion ')' THEN bloqueSentenciaEjecutableConRet ELSE bloqueSentenciaEjecutableConRet error
 124                          | IF '(' condicion THEN bloqueSentenciaEjecutableConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 125                          | IF '(' condicion THEN bloqueSentenciaEjecutableConRet END_IF
 126                          | IF condicion ')' THEN bloqueSentenciaEjecutableConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 127                          | IF condicion ')' THEN bloqueSentenciaEjecutableConRet END_IF
 128                          | IF condicion THEN bloqueSentenciaEjecutableConRet ELSE bloqueSentenciaEjecutableConRet END_IF
 129                          | IF condicion THEN bloqueSentenciaEjecutableConRet END_IF
 130                          | IF '(' condicion ')' THEN error END_IF
 131                          | IF '(' condicion ')' THEN bloqueSentenciaEjecutableConRet ELSE error END_IF
 132                          | IF '(' condicion ')' THEN error ELSE bloqueSentenciaEjecutableConRet END_IF
 133                          | IF '(' condicion ')' THEN error ELSE error END_IF

 134  condicion : '(' expresion ',' listaExpresiones ')' comparador '(' expresion ',' listaExpresiones ')'
 135            | expresion ',' listaExpresiones comparador expresion ',' listaExpresiones
 136            | expresion ',' listaExpresiones comparador '(' expresion ',' listaExpresiones ')'
 137            | '(' expresion ',' listaExpresiones error comparador error expresion ',' listaExpresiones ')'
 138            | '(' expresion ',' listaExpresiones ')' comparador error expresion ',' listaExpresiones error
 139            | '(' expresion ',' listaExpresiones error comparador '(' expresion ',' listaExpresiones ')'
 140            | '(' expresion ',' listaExpresiones ')' comparador error expresion ',' listaExpresiones ')'
 141            | '(' expresion ',' listaExpresiones ')' error '(' expresion ',' listaExpresiones ')'
 142            | '(' expresion ',' listaExpresiones ')' comparador '(' expresion ',' listaExpresiones error
 143            | expresion comparador expresion
 144            | error comparador expresion
 145            | expresion comparador error
 146            | expresion error expresion

 147  listaExpresiones : listaExpresiones ',' expresion
 148                   | expresion
 149                   | listaExpresiones ',' error

 150  comparador : '<'
 151             | '>'
 152             | '='
 153             | DISTINTO
 154             | MENOR_IGUAL
 155             | MAYOR_IGUAL

 156  cuerpoEjecutable : cuerpoEjecutable sentenciaEjecutable ';'
 157                   | sentenciaEjecutable ';'
 158                   | sentenciaEjecutable error

 159  bloqueSentenciaEjecutable : sentenciaEjecutable ';'
 160                            | sentenciaEjecutable error
 161                            | BEGIN cuerpoEjecutable END

 162  cuerpoEjecutableConRet : cuerpoEjecutableConRet sentenciaEjecutableConRet ';'
 163                         | sentenciaEjecutableConRet ';'

 164  bloqueSentenciaEjecutableConRet : sentenciaEjecutableConRet ';'
 165                                  | sentenciaEjecutableConRet error
 166                                  | BEGIN cuerpoEjecutableConRet END

 167  clausulaBucle : REPEAT bloqueSentenciaEjecutable WHILE '(' condicion ')'
 168                | REPEAT error WHILE '(' condicion ')'
 169                | REPEAT bloqueSentenciaEjecutable WHILE error condicion ')'
 170                | REPEAT bloqueSentenciaEjecutable WHILE '(' error ')'
 171                | REPEAT bloqueSentenciaEjecutable WHILE '(' condicion
 172                | REPEAT bloqueSentenciaEjecutable WHILE error condicion error
 173                | REPEAT error WHILE '(' error ')'
 174                | REPEAT error WHILE error condicion error
 175                | REPEAT bloqueSentenciaEjecutable error

 176  goto : GOTO etiqueta '@'
 177       | GOTO etiqueta error
 178       | GOTO error '@'
 179       | etiqueta '@'

 180  etiqueta : IDENTIFICADOR ':'
 181           | ':'

 182  mensajeSalida : OUTF '(' expresion ')'
 183                | OUTF '(' CADENA_MULTI ')'
 184                | OUTF '(' error ')'

state 0
	$accept : . programa $end  (0)

	IDENTIFICADOR  shift 1
	BEGIN  shift 2
	.  error

	programa  goto 3


state 1
	programa : IDENTIFICADOR . BEGIN cuerpo END  (1)
	programa : IDENTIFICADOR . BEGIN END  (2)
	programa : IDENTIFICADOR . BEGIN cuerpo  (3)
	programa : IDENTIFICADOR . error cuerpo END  (4)
	programa : IDENTIFICADOR . error cuerpo error  (6)

	error  shift 4
	BEGIN  shift 5
	.  error


state 2
	programa : BEGIN . cuerpo END  (5)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	OUTF  shift 11
	TYPEDEF  shift 12
	RET  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	LONGINT  shift 17
	':'  shift 18
	.  error

	cuerpo  goto 19
	sentencia  goto 20
	sentenciaDeclarativa  goto 21
	sentenciaEjecutable  goto 22
	etiqueta  goto 23
	sentenciaRet  goto 24
	tipoDato  goto 25
	typedefDeclaracion  goto 26
	declaracionSubtipo  goto 27
	asignacion  goto 28
	clausulaSeleccion  goto 29
	clausulaBucle  goto 30
	goto  goto 31
	mensajeSalida  goto 32


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : IDENTIFICADOR error . cuerpo END  (4)
	programa : IDENTIFICADOR error . cuerpo error  (6)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	OUTF  shift 11
	TYPEDEF  shift 12
	RET  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	LONGINT  shift 17
	':'  shift 18
	.  error

	cuerpo  goto 33
	sentencia  goto 20
	sentenciaDeclarativa  goto 21
	sentenciaEjecutable  goto 22
	etiqueta  goto 23
	sentenciaRet  goto 24
	tipoDato  goto 25
	typedefDeclaracion  goto 26
	declaracionSubtipo  goto 27
	asignacion  goto 28
	clausulaSeleccion  goto 29
	clausulaBucle  goto 30
	goto  goto 31
	mensajeSalida  goto 32


state 5
	programa : IDENTIFICADOR BEGIN . cuerpo END  (1)
	programa : IDENTIFICADOR BEGIN . END  (2)
	programa : IDENTIFICADOR BEGIN . cuerpo  (3)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	END  shift 34
	OUTF  shift 11
	TYPEDEF  shift 12
	RET  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	LONGINT  shift 17
	':'  shift 18
	.  error

	cuerpo  goto 35
	sentencia  goto 20
	sentenciaDeclarativa  goto 21
	sentenciaEjecutable  goto 22
	etiqueta  goto 23
	sentenciaRet  goto 24
	tipoDato  goto 25
	typedefDeclaracion  goto 26
	declaracionSubtipo  goto 27
	asignacion  goto 28
	clausulaSeleccion  goto 29
	clausulaBucle  goto 30
	goto  goto 31
	mensajeSalida  goto 32


state 6
	sentencia : error . ';'  (13)
	typedefDeclaracion : error . declaracionTriple  (26)

	TRIPLE  shift 36
	';'  shift 37
	.  error

	declaracionTriple  goto 38


state 7
	declaracionSubtipo : IDENTIFICADOR . SIMASIGNACION tipoDato '{' listaConstante '}'  (28)
	declaracionSubtipo : IDENTIFICADOR . SIMASIGNACION tipoDato '{' '}'  (30)
	asignacion : IDENTIFICADOR . SIMASIGNACION expresion  (77)
	asignacion : IDENTIFICADOR . CADENA_MULTI SIMASIGNACION expresion  (78)
	asignacion : IDENTIFICADOR . CONSTANTE SIMASIGNACION expresion  (79)
	etiqueta : IDENTIFICADOR . ':'  (180)

	CADENA_MULTI  shift 39
	SIMASIGNACION  shift 40
	CONSTANTE  shift 41
	':'  shift 42
	.  error


state 8
	tipoDato : HEXADECIMAL .  (48)

	.  reduce 48


state 9
	declaracionSubtipo : SIMASIGNACION . tipoDato '{' listaConstante '}'  (29)

	HEXADECIMAL  shift 8
	SINGLE  shift 14
	LONGINT  shift 17
	.  error

	tipoDato  goto 43


state 10
	clausulaSeleccion : IF . '(' condicion ')' THEN bloqueSentenciaEjecutable END_IF  (102)
	clausulaSeleccion : IF . '(' expresion ')' THEN bloqueSentenciaEjecutable END_IF  (103)
	clausulaSeleccion : IF . '(' expresion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF  (104)
	clausulaSeleccion : IF . '(' condicion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF  (105)
	clausulaSeleccion : IF . '(' condicion ')' THEN bloqueSentenciaEjecutable error  (106)
	clausulaSeleccion : IF . '(' condicion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable error  (107)
	clausulaSeleccion : IF . '(' condicion THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF  (108)
	clausulaSeleccion : IF . '(' condicion THEN bloqueSentenciaEjecutable END_IF  (109)
	clausulaSeleccion : IF . condicion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF  (110)
	clausulaSeleccion : IF . condicion ')' THEN bloqueSentenciaEjecutable END_IF  (111)
	clausulaSeleccion : IF . condicion THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF  (112)
	clausulaSeleccion : IF . condicion THEN bloqueSentenciaEjecutable END_IF  (113)
	clausulaSeleccion : IF . '(' condicion ')' THEN error END_IF  (114)
	clausulaSeleccion : IF . '(' condicion ')' THEN bloqueSentenciaEjecutable ELSE error END_IF  (115)
	clausulaSeleccion : IF . '(' condicion ')' THEN error ELSE bloqueSentenciaEjecutable END_IF  (116)
	clausulaSeleccion : IF . '(' condicion ')' THEN error ELSE error END_IF  (117)

	error  shift 44
	IDENTIFICADOR  shift 45
	CONSTANTE  shift 46
	'-'  shift 47
	'('  shift 48
	.  error

	constante  goto 49
	expresion  goto 50
	operando  goto 51
	invocacionFuncion  goto 52
	condicion  goto 53


state 11
	mensajeSalida : OUTF . '(' expresion ')'  (182)
	mensajeSalida : OUTF . '(' CADENA_MULTI ')'  (183)
	mensajeSalida : OUTF . '(' error ')'  (184)

	'('  shift 54
	.  error


state 12
	typedefDeclaracion : TYPEDEF . declaracionSubtipo  (23)
	typedefDeclaracion : TYPEDEF . declaracionTriple  (24)
	typedefDeclaracion : TYPEDEF . error  (27)

	error  shift 55
	IDENTIFICADOR  shift 56
	SIMASIGNACION  shift 9
	TRIPLE  shift 36
	.  error

	declaracionSubtipo  goto 57
	declaracionTriple  goto 58


state 13
	sentenciaRet : RET . '(' expresion ')'  (65)

	'('  shift 59
	.  error


state 14
	tipoDato : SINGLE .  (46)

	.  reduce 46


state 15
	clausulaBucle : REPEAT . bloqueSentenciaEjecutable WHILE '(' condicion ')'  (167)
	clausulaBucle : REPEAT . error WHILE '(' condicion ')'  (168)
	clausulaBucle : REPEAT . bloqueSentenciaEjecutable WHILE error condicion ')'  (169)
	clausulaBucle : REPEAT . bloqueSentenciaEjecutable WHILE '(' error ')'  (170)
	clausulaBucle : REPEAT . bloqueSentenciaEjecutable WHILE '(' condicion  (171)
	clausulaBucle : REPEAT . bloqueSentenciaEjecutable WHILE error condicion error  (172)
	clausulaBucle : REPEAT . error WHILE '(' error ')'  (173)
	clausulaBucle : REPEAT . error WHILE error condicion error  (174)
	clausulaBucle : REPEAT . bloqueSentenciaEjecutable error  (175)

	error  shift 60
	IDENTIFICADOR  shift 61
	IF  shift 10
	BEGIN  shift 62
	OUTF  shift 11
	REPEAT  shift 15
	GOTO  shift 16
	':'  shift 18
	.  error

	sentenciaEjecutable  goto 63
	etiqueta  goto 64
	asignacion  goto 28
	clausulaSeleccion  goto 29
	clausulaBucle  goto 30
	goto  goto 31
	mensajeSalida  goto 32
	bloqueSentenciaEjecutable  goto 65


state 16
	goto : GOTO . etiqueta '@'  (176)
	goto : GOTO . etiqueta error  (177)
	goto : GOTO . error '@'  (178)

	error  shift 66
	IDENTIFICADOR  shift 67
	':'  shift 18
	.  error

	etiqueta  goto 68


state 17
	tipoDato : LONGINT .  (47)

	.  reduce 47


state 18
	etiqueta : ':' .  (181)

	.  reduce 181


state 19
	programa : BEGIN cuerpo . END  (5)
	cuerpo : cuerpo . sentencia  (7)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	END  shift 69
	OUTF  shift 11
	TYPEDEF  shift 12
	RET  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	LONGINT  shift 17
	':'  shift 18
	.  error

	sentencia  goto 70
	sentenciaDeclarativa  goto 21
	sentenciaEjecutable  goto 22
	etiqueta  goto 23
	sentenciaRet  goto 24
	tipoDato  goto 25
	typedefDeclaracion  goto 26
	declaracionSubtipo  goto 27
	asignacion  goto 28
	clausulaSeleccion  goto 29
	clausulaBucle  goto 30
	goto  goto 31
	mensajeSalida  goto 32


state 20
	cuerpo : sentencia .  (8)

	.  reduce 8


state 21
	sentencia : sentenciaDeclarativa .  (9)

	.  reduce 9


state 22
	sentencia : sentenciaEjecutable . ';'  (10)
	sentencia : sentenciaEjecutable . error  (12)

	error  shift 71
	';'  shift 72
	.  error


state 23
	sentencia : etiqueta .  (11)
	goto : etiqueta . '@'  (179)

	'@'  shift 73
	$end  reduce 11
	error  reduce 11
	IDENTIFICADOR  reduce 11
	HEXADECIMAL  reduce 11
	SIMASIGNACION  reduce 11
	IF  reduce 11
	END  reduce 11
	OUTF  reduce 11
	TYPEDEF  reduce 11
	RET  reduce 11
	SINGLE  reduce 11
	REPEAT  reduce 11
	GOTO  reduce 11
	LONGINT  reduce 11
	':'  reduce 11


state 24
	sentencia : sentenciaRet . ';'  (14)

	';'  shift 74
	.  error


state 25
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR ';'  (15)
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR ',' listaVariable ';'  (16)
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR ',' error ';'  (17)
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR ',' listaVariable error ';'  (18)
	sentenciaDeclarativa : tipoDato . IDENTIFICADOR error ';'  (19)
	sentenciaDeclarativa : tipoDato . funDeclaracion ';'  (22)

	IDENTIFICADOR  shift 75
	FUN  shift 76
	.  error

	funDeclaracion  goto 77
	funComienzo  goto 78


state 26
	sentenciaDeclarativa : typedefDeclaracion . ';'  (20)
	sentenciaDeclarativa : typedefDeclaracion . error  (21)

	error  shift 79
	';'  shift 80
	.  error


state 27
	typedefDeclaracion : declaracionSubtipo .  (25)

	.  reduce 25


state 28
	sentenciaEjecutable : asignacion .  (66)

	.  reduce 66


state 29
	sentenciaEjecutable : clausulaSeleccion .  (67)

	.  reduce 67


state 30
	sentenciaEjecutable : clausulaBucle .  (68)

	.  reduce 68


state 31
	sentenciaEjecutable : goto .  (69)

	.  reduce 69


state 32
	sentenciaEjecutable : mensajeSalida .  (70)

	.  reduce 70


state 33
	programa : IDENTIFICADOR error cuerpo . END  (4)
	programa : IDENTIFICADOR error cuerpo . error  (6)
	cuerpo : cuerpo . sentencia  (7)

	error  shift 81
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	END  shift 82
	OUTF  shift 11
	TYPEDEF  shift 12
	RET  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	LONGINT  shift 17
	':'  shift 18
	.  error

	sentencia  goto 70
	sentenciaDeclarativa  goto 21
	sentenciaEjecutable  goto 22
	etiqueta  goto 23
	sentenciaRet  goto 24
	tipoDato  goto 25
	typedefDeclaracion  goto 26
	declaracionSubtipo  goto 27
	asignacion  goto 28
	clausulaSeleccion  goto 29
	clausulaBucle  goto 30
	goto  goto 31
	mensajeSalida  goto 32


state 34
	programa : IDENTIFICADOR BEGIN END .  (2)

	.  reduce 2


state 35
	programa : IDENTIFICADOR BEGIN cuerpo . END  (1)
	programa : IDENTIFICADOR BEGIN cuerpo .  (3)
	cuerpo : cuerpo . sentencia  (7)

	error  shift 6
	IDENTIFICADOR  shift 7
	HEXADECIMAL  shift 8
	SIMASIGNACION  shift 9
	IF  shift 10
	END  shift 83
	OUTF  shift 11
	TYPEDEF  shift 12
	RET  shift 13
	SINGLE  shift 14
	REPEAT  shift 15
	GOTO  shift 16
	LONGINT  shift 17
	':'  shift 18
	$end  reduce 3

	sentencia  goto 70
	sentenciaDeclarativa  goto 21
	sentenciaEjecutable  goto 22
	etiqueta  goto 23
	sentenciaRet  goto 24
	tipoDato  goto 25
	typedefDeclaracion  goto 26
	declaracionSubtipo  goto 27
	asignacion  goto 28
	clausulaSeleccion  goto 29
	clausulaBucle  goto 30
	goto  goto 31
	mensajeSalida  goto 32


state 36
	declaracionTriple : TRIPLE . '<' tipoDato '>' IDENTIFICADOR  (31)
	declaracionTriple : TRIPLE . '<' IDENTIFICADOR '>' IDENTIFICADOR  (32)
	declaracionTriple : TRIPLE . '<' error '>' IDENTIFICADOR  (33)
	declaracionTriple : TRIPLE . '<' tipoDato '>' error  (34)
	declaracionTriple : TRIPLE . '<' IDENTIFICADOR '>' error  (35)
	declaracionTriple : TRIPLE . '<' error '>' error  (36)
	declaracionTriple : TRIPLE . IDENTIFICADOR '>' IDENTIFICADOR  (37)
	declaracionTriple : TRIPLE . '<' IDENTIFICADOR IDENTIFICADOR  (38)
	declaracionTriple : TRIPLE . IDENTIFICADOR IDENTIFICADOR  (39)
	declaracionTriple : TRIPLE . tipoDato IDENTIFICADOR  (40)

	IDENTIFICADOR  shift 84
	HEXADECIMAL  shift 8
	SINGLE  shift 14
	LONGINT  shift 17
	'<'  shift 85
	.  error

	tipoDato  goto 86


state 37
	sentencia : error ';' .  (13)

	.  reduce 13


state 38
	typedefDeclaracion : error declaracionTriple .  (26)

	.  reduce 26


state 39
	asignacion : IDENTIFICADOR CADENA_MULTI . SIMASIGNACION expresion  (78)

	SIMASIGNACION  shift 87
	.  error


state 40
	declaracionSubtipo : IDENTIFICADOR SIMASIGNACION . tipoDato '{' listaConstante '}'  (28)
	declaracionSubtipo : IDENTIFICADOR SIMASIGNACION . tipoDato '{' '}'  (30)
	asignacion : IDENTIFICADOR SIMASIGNACION . expresion  (77)

	error  shift 88
	IDENTIFICADOR  shift 45
	HEXADECIMAL  shift 8
	SINGLE  shift 14
	LONGINT  shift 17
	CONSTANTE  shift 46
	'-'  shift 47
	.  error

	tipoDato  goto 89
	constante  goto 49
	expresion  goto 90
	operando  goto 51
	invocacionFuncion  goto 52


state 41
	asignacion : IDENTIFICADOR CONSTANTE . SIMASIGNACION expresion  (79)

	SIMASIGNACION  shift 91
	.  error


state 42
	etiqueta : IDENTIFICADOR ':' .  (180)

	.  reduce 180


state 43
	declaracionSubtipo : SIMASIGNACION tipoDato . '{' listaConstante '}'  (29)

	'{'  shift 92
	.  error


state 44
	expresion : error . operador operando  (82)
	condicion : error . comparador expresion  (144)

	DISTINTO  shift 93
	MENOR_IGUAL  shift 94
	MAYOR_IGUAL  shift 95
	'+'  shift 96
	'-'  shift 97
	'*'  shift 98
	'/'  shift 99
	'<'  shift 100
	'>'  shift 101
	'='  shift 102
	.  error

	operador  goto 103
	comparador  goto 104


state 45
	operando : IDENTIFICADOR .  (88)
	operando : IDENTIFICADOR . CADENA_MULTI  (91)
	operando : IDENTIFICADOR . '1'  (92)
	operando : IDENTIFICADOR . '2'  (93)
	operando : IDENTIFICADOR . '3'  (94)
	invocacionFuncion : IDENTIFICADOR . '(' expresion ')'  (95)
	invocacionFuncion : IDENTIFICADOR . '(' tipoDato expresion ')'  (96)
	invocacionFuncion : IDENTIFICADOR . '(' tipoDato '(' expresion ')' ')'  (97)
	invocacionFuncion : IDENTIFICADOR . '(' expresion ',' error ')'  (98)
	invocacionFuncion : IDENTIFICADOR . '(' error ')'  (99)
	invocacionFuncion : IDENTIFICADOR . '(' tipoDato expresion ',' error ')'  (100)
	invocacionFuncion : IDENTIFICADOR . '(' tipoDato '(' expresion ')' ',' error ')'  (101)

	CADENA_MULTI  shift 105
	'('  shift 106
	'1'  shift 107
	'2'  shift 108
	'3'  shift 109
	error  reduce 88
	IDENTIFICADOR  reduce 88
	HEXADECIMAL  reduce 88
	SIMASIGNACION  reduce 88
	DISTINTO  reduce 88
	IF  reduce 88
	THEN  reduce 88
	END  reduce 88
	OUTF  reduce 88
	TYPEDEF  reduce 88
	RET  reduce 88
	SINGLE  reduce 88
	MENOR_IGUAL  reduce 88
	MAYOR_IGUAL  reduce 88
	REPEAT  reduce 88
	GOTO  reduce 88
	LONGINT  reduce 88
	'+'  reduce 88
	'-'  reduce 88
	'*'  reduce 88
	'/'  reduce 88
	';'  reduce 88
	','  reduce 88
	'<'  reduce 88
	'>'  reduce 88
	')'  reduce 88
	'='  reduce 88
	':'  reduce 88


state 46
	constante : CONSTANTE .  (54)

	.  reduce 54


state 47
	constante : '-' . CONSTANTE  (55)

	CONSTANTE  shift 110
	.  error


state 48
	clausulaSeleccion : IF '(' . condicion ')' THEN bloqueSentenciaEjecutable END_IF  (102)
	clausulaSeleccion : IF '(' . expresion ')' THEN bloqueSentenciaEjecutable END_IF  (103)
	clausulaSeleccion : IF '(' . expresion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF  (104)
	clausulaSeleccion : IF '(' . condicion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF  (105)
	clausulaSeleccion : IF '(' . condicion ')' THEN bloqueSentenciaEjecutable error  (106)
	clausulaSeleccion : IF '(' . condicion ')' THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable error  (107)
	clausulaSeleccion : IF '(' . condicion THEN bloqueSentenciaEjecutable ELSE bloqueSentenciaEjecutable END_IF  (108)
	clausulaSeleccion : IF '(' . condicion THEN bloqueSentenciaEjecutable END_IF  (109)
	clausulaSeleccion : IF '(' . condicion ')' THEN error END_IF  (114)
	clausulaSeleccion : IF '(' . condicion ')' THEN bloqueSentenciaEjecutable ELSE error END_IF  (115)
	clausulaSeleccion : IF '(' . condicion ')' THEN error ELSE bloqueSentenciaEjecutable END_IF  (116)
	clausulaSeleccion : IF '(' . condicion ')' THEN error ELSE error END_IF  (117)
	condicion : '(' . expresion ',' listaExpresiones ')' comparador '(' expresion ',' listaExpresiones ')'  (134)
	condicion : '(' . expresion ',' listaExpresiones error comparador error expresion ',' listaExpresiones ')'  (137)
	condicion : '(' . expresion ',' listaExpresiones ')' comparador error expresion ',' listaExpresiones error  (138)
	condicion : '(' . expresion ',' listaExpresiones error comparador '(' expresion ',' listaExpresiones ')'  (139)
	condicion : '(' . expresion ',' listaExpresiones ')' comparador error expresion ',' listaExpresiones ')'  (140)
	condicion : '(' . expresion ',' listaExpresiones ')' error '(' expresion ',' listaExpresiones ')'  (141)
	condicion : '(' . expresion ',' listaExpresiones ')' comparador '(' expresion ',' listaExpresiones error  (142)

	error  shift 44
	IDENTIFICADOR  shift 45
	CONSTANTE  shift 46
	'-'  shift 47
	'('  shift 111
	.  error
